--- a/.env
+++ b/.env
@@ -1,15 +1,4 @@
-PORT = 
-
-# database info docker:
-DATABASE_USER = docker
-DATABASE_HOST = db
-DATABASE_NAME = docker
-DATABASE_PASSWORD = 123456
-
-
-#regular app db
-# DATABASE_USER = 'postgres'
-# DATABASE_HOST = "postgres"
-# DATABASE_NAME = "ClockData"
-# DATABASE_PASSWORD = "82465"
-# DATABASE_PORT = 5432
+DB_USER=teste 
+DB_HOST=db
+DB_NAME=teste
+DB_PASSWORD=654321
