--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "docker-compose up --build -d",
+    "stop": "docker-compose down"
   },
   "keywords": [],
   "author": "",
